Remove parent argument from TimedItem constructors

--- a/test/testcases/test-iteration-start.html
+++ b/test/testcases/test-iteration-start.html
@@ -135,15 +135,14 @@ for (var i = 0; i < directions.length; i++) {
 for (var i = 0; i < containers.length; i++) {
   var container = document.getElementById(containers[i]);
   // Test basic use.
-  new Animation(container.getElementsByClassName("a")[0],
+  groups[i].append(new Animation(container.getElementsByClassName("a")[0],
       {left: ["100px", "300px"]},
-      {duration: 1, iterationCount: 3.1, iterationStart: 0.3},
-      groups[i]);
+      {duration: 1, iterationCount: 3.1, iterationStart: 0.3}));
   try {
     // Test that iterationStart has a lower bound of zero.
-    new Animation(container.getElementsByClassName("b")[0],
+    groups[i].append(new Animation(container.getElementsByClassName("b")[0],
         {left: ["100px", "300px"]},
-        {duration: 1, iterationCount: 3.4, iterationStart: -0.2}, groups[i]);
+        {duration: 1, iterationCount: 3.4, iterationStart: -0.2}));
   } catch (e) {
     if (e.name == "IndexSizeError") {
       container.getElementsByClassName("b")[0].style["background-color"] =
@@ -154,27 +153,23 @@ for (var i = 0; i < containers.length; i++) {
     }
   }
   // Test that iterationStart is not clipped to iterationCount.
-  new Animation(container.getElementsByClassName("c")[0],
+  groups[i].append(new Animation(container.getElementsByClassName("c")[0],
       {left: ["100px", "300px"]},
-      {duration: 1, iterationCount: 1.6, iterationStart: 1.8},
-      groups[i]);
+      {duration: 1, iterationCount: 1.6, iterationStart: 1.8}));
   // Test that nothing odd happens when iterationCount is an integer.
-  new Animation(container.getElementsByClassName("d")[0],
+  groups[i].append(new Animation(container.getElementsByClassName("d")[0],
       {left: ["100px", "300px"]},
-      {duration: 1, iterationCount: 3.0, iterationStart: 0.4},
-      groups[i]);
+      {duration: 1, iterationCount: 3.0, iterationStart: 0.4}));
   // Test that nothing odd happens when (iterationCount - iterationStart) is an
   // integer.
-  new Animation(container.getElementsByClassName("e")[0],
+  groups[i].append(new Animation(container.getElementsByClassName("e")[0],
       {left: ["100px", "300px"]},
-      {duration: 1, iterationCount: 3.2, iterationStart: 0.2},
-      groups[i]);
+      {duration: 1, iterationCount: 3.2, iterationStart: 0.2}));
   // Test that nothing odd happens when (iterationCount + iterationStart) is an
   // integer.
-  new Animation(container.getElementsByClassName("f")[0],
+  groups[i].append(new Animation(container.getElementsByClassName("f")[0],
       {left: ["100px", "180px"]},
-      {duration: 1, iterationCount: 2.8, iterationStart: 0.2},
-      groups[i]);
+      {duration: 1, iterationCount: 2.8, iterationStart: 0.2}));
   document.timeline.play(groups[i]);
 }
 </script>
