--- a/test/testcases/test-iterations-basic.html
+++ b/test/testcases/test-iterations-basic.html
@@ -93,28 +93,22 @@ iteration (or start if reversed).</div>
 var containers = ["ca", "cb", "cc", "cd"];
 
 var directions = ["normal", "reverse", "alternate", "alternate-reverse"];
-var groups = [];
 
 for (var i = 0; i < directions.length; i++) {
   var dir = directions[i];
-  groups.push(
-      new ParGroup([], {iterationCount: 2, direction: dir, duration: 4}));
-}
-
-for (var i = 0; i < containers.length; i++) {
   var container = document.getElementById(containers[i]);
-  // Test basic use.
-  new Animation(container.getElementsByClassName("a")[0],
-      {left: ["100px", "300px"]}, {duration: 1, iterationCount: 3.4},
-      groups[i]);
-  // Test integer iterationCount.
-  new Animation(container.getElementsByClassName("b")[0],
-      {left: ["100px", "180px"]}, {duration: 1, iterationCount: 3.0},
-      groups[i]);
-  // Test zero iterationCount.
-  new Animation(container.getElementsByClassName("c")[0],
-      {left: ["180px", "300px"]}, {duration: 1, iterationCount: 0.0},
-      groups[i]);
-  document.timeline.play(groups[i]);
+
+  document.timeline.play(
+      new ParGroup([
+          // Test basic use.
+          new Animation(container.getElementsByClassName("a")[0],
+              {left: ["100px", "300px"]}, {duration: 1, iterationCount: 3.4}),
+          // Test integer iterationCount.
+          new Animation(container.getElementsByClassName("b")[0],
+              {left: ["100px", "180px"]}, {duration: 1, iterationCount: 3.0}),
+          // Test zero iterationCount.
+          new Animation(container.getElementsByClassName("c")[0],
+              {left: ["180px", "300px"]}, {duration: 1, iterationCount: 0.0}),
+          ], {iterationCount: 2, direction: dir, duration: 4}));
 }
 </script>
