--- a/test/testcases/test-iterations-fill.html
+++ b/test/testcases/test-iterations-fill.html
@@ -145,20 +145,20 @@ function sampleFunc(timeFraction, iteration, target) {
 for (var i = 0; i < fillModes.length; i++) {
   var divs = document.querySelectorAll(categories[i]);
   for (var j = 0; j < divs.length; j++) {
-    new Animation(divs[j], {left: ["100px", "200px"]}, {
+    groups[j].append(new Animation(divs[j], {left: ["100px", "200px"]}, {
       startDelay: 1,
       duration: 1,
       iterationCount: 2,
       fillMode: fillModes[i],
       playbackRate: 0.8
-    }, groups[j]);
-    new Animation(divs[j], {sample: sampleFunc}, {
+    }));
+    groups[j].append(new Animation(divs[j], {sample: sampleFunc}, {
       startDelay: 1,
       duration: 1,
       iterationCount: 2,
       fillMode: fillModes[i],
       playbackRate: 0.8
-    }, groups[j]);
+    }));
   }
 }
 for (var j = 0; j < divs.length; j++) {
