Reworking test-restart to make more sense.

--- a/test/testcases/test-restart.html
+++ b/test/testcases/test-restart.html
@@ -24,6 +24,8 @@ div.anim {
 
 <div id="anim1" class="anim"></div>
 <div id="anim2" class="anim"></div>
+<div id="anim3" class="anim"></div>
+<div id="anim4" class="anim"></div>
 
 <script src="../testharness_bootstrap.js"></script>
 <script src="../../web-animations.js"></script>
@@ -37,6 +39,9 @@ var player1 = document.timeline.play(anim1);
 var anim2 = new Animation(document.getElementById("anim2"), animFunc, 1.0);
 var player2 = document.timeline.play(anim2);
 
+var anim3 = new Animation(document.getElementById("anim3"), animFunc, 1.0);
+var player3 = document.timeline.play(anim3);
+
 // Check that once an animation is completed, creating a new Player restarts it.
 test_at(1.0, function() {
     assert_styles('#anim1', {'left': '100px'});
@@ -44,36 +49,59 @@ test_at(1.0, function() {
   },
   "Animation 1 should be in end state");
 
-test_at(1.0, function() {assert_styles('#anim1', {'left': '0px'})},
-  "Animation 1 should be in start state");
+test_at(1.5, function() {assert_styles('#anim1', {'left': '50px'})},
+  "Animation 1 should have been restarted");
 
 test_at(2.0, function() {assert_styles('#anim1', {'left': '100px'})},
   "Animation 1 should be in end state a second time");
 
-// Check that once an animation is completed, setting Player.currentTime = 0
-// restarts it.
-test_at(1.0, function() {
-    assert_styles("#anim2", {'left': '100px'});
+// Setting Player.currentTime = 0 restarts it.
+test_at(0.5, function() {
+    assert_styles("#anim2", {'left': '50px'});
     player2.currentTime = 0.0;
   },
-  "Animation 2 should be in end state");
+  "Animation 2 should be in the middle of running");
+
+test_at(0.75, function() {
+    assert_styles('#anim2', {'left': '25px'});
+  },
+  "Animation 2 should have been restarted");
 
 test_at(1.0, function() {
-    assert_styles('#anim2', {'left': '0px'});
+    assert_styles('#anim2', {'left': '50px'});
   },
-  "Animation 2 should be in start state");
+  "Animation 2 should have been restarted, 2");
 
-test_at(2.0, function() {
-    assert_styles('#anim1', {'left': '100px'});
+test_at(1.5, function() {
+    assert_styles('#anim2', {'left': '100px'});
   },
   "Animation 2 should be in end state a second time");
 
+// Even when animation is completed, setting Player.currentTime = 0 restarts
+// it.
+test_at(1.0, function() {
+    assert_styles("#anim3", {'left': '100px'});
+    player3.currentTime = 0.0;
+  },
+  "Animation 3 should be in end state");
+
+test_at(1.5, function() {
+    assert_styles('#anim3', {'left': '50px'});
+  },
+  "Animation 3 should have been restarted");
+
+test_at(2.0, function() {
+    assert_styles('#anim3', {'left': '100px'});
+  },
+  "Animation 3 should be in end state a second time");
+
+
 // Check that TimedItem.localTime is read-only.
-var anim3 = new Animation(document.getElementById("anim2"), animFunc, 1.0);
-document.timeline.play(anim3);
+var anim4 = new Animation(document.getElementById("anim4"), animFunc, 1.0);
+document.timeline.play(anim4);
 test(function() {
-    assert_throws(new TypeError(), function() {anim3.localTime = 0;});
-    assert_equals(anim3.localTime,  null);
+    assert_throws(new TypeError(), function() {anim4.localTime = 0;});
+    assert_equals(anim4.localTime,  null);
   },
   "TimedItem.localTime should be read-only");
 
