Adding dummy tests so that none of the tests are in "no-test" state.

--- a/test/testcases/test-preset-timings.html
+++ b/test/testcases/test-preset-timings.html
@@ -58,4 +58,8 @@ testTiming('linear');
 testTiming('ease-in');
 testTiming('ease-out');
 testTiming('ease-in-out');
+
+// FIXME! - Make this actually test something...
+test(function() { assert_true(true); }, "Dummy test");
+
 </script>
