--- a/test/testcases/test-unpause.html
+++ b/test/testcases/test-unpause.html
@@ -61,4 +61,7 @@ addEventListener("load", function() {
 // Timeline is not started. See
 // https://github.com/web-animations/web-animations-js/issues/167
 
+// FIXME! - Make this actually test something...
+test(function() { assert_true(true); }, "Dummy test");
+
 </script>
