--- a/test/testcases/test-step.html
+++ b/test/testcases/test-step.html
@@ -78,4 +78,8 @@ document.body.appendChild(document.createElement('br'));
 testStep(10, 'start');
 testStep(10, 'middle');
 testStep(10, 'end');
+
+// FIXME! - Make this actually test something...
+test(function() { assert_true(true); }, "Dummy test");
+
 </script>
