--- a/test/testcases/unit-test-set-parent.html
+++ b/test/testcases/unit-test-set-parent.html
@@ -27,29 +27,29 @@ var animFunc = {left: "100px"};
 
 // Test that Animation is constructed with no parent.
 var child = new Animation(elem, animFunc, 1);
-test(function() {assert_equals(child.parentGroup, null)},
+test(function() {assert_equals(child.parent, null)},
     "Child should have no parent");
 
 // Test that group is constructed with zero children.
-var parentGroup = new ParGroup();
-test(function() {assert_equals(parentGroup.children.length, 0)},
+var parent = new ParGroup();
+test(function() {assert_equals(parent.children.length, 0)},
     "Parent should have zero children");
 
 // Test that updates are made to child when constructing parent.
-var parentGroup = new ParGroup([child]);
-test(function() {assert_equals(child.parentGroup, parentGroup)},
-    "Parent's constructor, Child's parentGroup should be set to parent");
-test(function() {assert_equals(parentGroup.children.length, 1)},
+var parent = new ParGroup([child]);
+test(function() {assert_equals(child.parent, parent)},
+    "Parent's constructor, Child's parent should be set to parent");
+test(function() {assert_equals(parent.children.length, 1)},
     "Parent's constructor, Parent should have 1 child");
-test(function() {assert_equals(parentGroup.children[0], child)},
+test(function() {assert_equals(parent.children[0], child)},
     "Parent's constructor, Parent should have correct child");
 
 // Test that updates are made to previous and new parent when using append().
 var newParent = new ParGroup();
 newParent.append(child);
-test(function() {assert_equals(child.parentGroup, newParent)},
-    "With .append, child's parentGroup should be updated to new parent");
-test(function() {assert_equals(parentGroup.children.length, 0)},
+test(function() {assert_equals(child.parent, newParent)},
+    "With .append, child's parent should be updated to new parent");
+test(function() {assert_equals(parent.children.length, 0)},
     "With .append, Previous parent should no longer have children");
 test(function() {assert_equals(newParent.children.length, 1)},
     "With .append, New parent should now have 1 child");
@@ -82,8 +82,8 @@ test(function() {assert_equals(sibling.startTime, 0.0)},
 test(function() {assert_equals(child.startTime, 1.0)},
      "After.append, Start time of 'child'");
 
-// Test that setting TimedItem.parentGroup is ignored.
-try { child.parentGroup = null; } catch (error) { }
+// Test that setting TimedItem.parent is ignored.
+try { child.parent = null; } catch (error) { }
 test(function() {assert_equals(seqGroup.children.length, 2)},
      "seqGroup.children.length");
 test(function() {assert_equals(seqGroup.children[0], sibling)},
@@ -99,9 +99,9 @@ test(function() {assert_equals(child.startTime, 1.0)},
 seqGroup.clear();
 test(function() {assert_equals(seqGroup.children.length, 0)},
      "Parent's children should be cleared");
-test(function() {assert_equals(child.parentGroup, null)},
-     "Child's parentGroup should be cleared");
-test(function() {assert_equals(sibling.parentGroup, null)},
-     "Sibling's parentGroup should be cleared");
+test(function() {assert_equals(child.parent, null)},
+     "Child's parent should be cleared");
+test(function() {assert_equals(sibling.parent, null)},
+     "Sibling's parent should be cleared");
 
 </script>
