Mostly implemented events (but not time scaling). Partially implemented tests for events.

--- a/test/testcases/impl-test-player-sees-handlers.html
+++ b/test/testcases/impl-test-player-sees-handlers.html
@@ -19,6 +19,7 @@ limitations under the License.
 <script src="../testharness_bootstrap.js"></script>
 <script src="../../web-animations.js"></script>
 <script>
+"use script";
 
 var body = document.querySelector("body");
 
