--- a/test/test-runner.html
+++ b/test/test-runner.html
@@ -76,8 +76,20 @@ tbody.no-tests {
 'use strict';
 var tests = [];
 function testCases(new_tests) { tests = new_tests; };
+function failingTestCases(failing_tests) {
+  // Remove failing tests from tests array, Javascript syle.
+  failing_tests.forEach(function(test) {
+    var index = tests.indexOf(test);
+    if (index >= 0) {
+      tests.splice(index, 1);
+    }
+  });
+};
 </script>
 <script src="testcases.jsonp?jsonp=testCases"></script>
+<script src="failing-testcases.jsonp?jsonp=failingTestCases"></script>
+<script>
+"use strict";
 
 <div id=status-box>
 <h1 id=status>Pending</h1>
