Using performance.now() instead of Date.now().

--- a/test/test-runner.html
+++ b/test/test-runner.html
@@ -106,7 +106,7 @@ var results = [];
  * @return {number} Time as this very moment.
  */
 function now() {
-  return Date.now();
+  return performance.now();
 }
 
 /**
